--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,12 @@
                 donde vamos a explicar las cosas 
                 increíbles que se pueden hacer
                 con ramas</p>
+                <p>Los blogs son la mejor forma de 
+                compartir información y tus ideas.
+                mucho más que ir a confrencias o salir en Youtube.
+                Excepto si eres un rockstar. Pero estadísticamente
+                no lo eres... por ahora.
+                </p>
             </div>
         </div>
 
